--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+@import "./Shared/Shared.css";
+
 .App {
   text-align: center;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
