--- a/src/Shared/Shared.css
+++ b/src/Shared/Shared.css
@@ -26,6 +26,23 @@
     padding-top: 6px;
 }
 
+.nav-text:hover + .underscore{
+    background-color: white;
+    width:100%;
+  }
+
+.nav-text:hover{
+    color: white;
+}
+
+.nav-text.activated{
+    color: white;
+    font-size: 18px;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: 800;
+    margin-bottom: 0;
+    padding-top: 6px;
+}
 .nav-link{
     text-decoration: none;
 }
@@ -55,4 +72,16 @@
 
 .nav-col-right-margin{
     margin-left: 3%;
+}
+
+.underscore{
+    width:0px;
+    height:2px;
+    transition: width 0.6s;
+    background-color:white;
+  }
+
+.underscore.activated{
+    width: 100%;
+    background-color: white;
 }
