customise scroll bar and handle

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,23 @@
     transform: rotate(360deg);
   }
 }*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3A3A3A;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
