add lines and convert some elements to % values

--- a/src/HomePage/Home.css
+++ b/src/HomePage/Home.css
@@ -24,9 +24,14 @@
 }
 
 .home-profile-col{
-    padding-top: 7%;
+    padding-top: 0%;
 }
 
 .project-image-ml{
     margin-left: 2%;
 }
+
+.box{
+    padding: 0 3% 0 3%;
+}
+
