--- a/src/Shared/Shared.css
+++ b/src/Shared/Shared.css
@@ -24,7 +24,7 @@
     width: 100%;
     z-index:1000;
     left: 50%;
-    transform: translate(-50%);
+    transform: translateX(-50%);
   }
 
 .nav-text{
