--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import "./Shared/Shared.css";
 @import "./HomePage/Home.css";
+@import "./AboutPage/About.css";
 .App {
   text-align: center;
 }
@@ -18,15 +19,6 @@
 .App-link {
   color: #61dafb;
 }
-
-/*@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}*/
 
 /* width */
 ::-webkit-scrollbar {
