finalise static content in about page
most of the content is now in place in the about page

--- a/src/Shared/Shared.css
+++ b/src/Shared/Shared.css
@@ -105,3 +105,11 @@
     border-top: 1px solid #707070;
     width: 150px;
 }
+
+.row-mb{
+    margin-bottom: 3%;
+}
+
+.row-mt{
+    margin-top: 4%;
+}
