--- a/src/AboutPage/About.css
+++ b/src/AboutPage/About.css
@@ -1,8 +1,8 @@
-.about-intro-text{
+.about-text{
     font-family: "Montserrat";
     font-size: 20px;
     color: white;
-    width: 800px;
+    width: 950px;
 }
 
 .about-title{
@@ -14,4 +14,8 @@
 .about-tools-padding{
     padding-left: 1.5%;
     padding-right: 1.5%;
+}
+
+.about-text-pl{
+    padding-left: 3%;
 }
