--- a/src/AboutPage/About.css
+++ b/src/AboutPage/About.css
@@ -1,5 +1,5 @@
 .about-text{
-    font-family: "Montserrat";
+    font-family: "Times New Roman";
     font-size: 20px;
     color: white;
     width: 950px;
