--- a/src/HomePage/Home.css
+++ b/src/HomePage/Home.css
@@ -63,9 +63,8 @@
   }
 
 .interaction-designer{
-    color: orange;
+    color: #add8e6;
     font-family: 'Bookman';
-    font-size: 24px;
 }
 .software-developer{
     color: lightgreen;
