add bodty text for experience

--- a/src/ExperiencePage/Experience.css
+++ b/src/ExperiencePage/Experience.css
@@ -4,6 +4,14 @@
     color: white;
 }
 
+.experience-body-text{
+    font-size: 20px;
+    font-family: "Times New Roman";
+    color: white;
+    width: 700px;
+    padding-left: 2%;
+}
+
 .experience-start-text{
     font-size: 40px;
     font-family: "Montserrat";
