--- a/src/ExperiencePage/Experience.css
+++ b/src/ExperiencePage/Experience.css
@@ -5,9 +5,9 @@
 }
 
 .experience-body-text{
-    font-size: 20px;
+    font-size: 18px;
     font-family: "Times New Roman";
-    color: white;
+    color: #f2f2f2;
     width: 700px;
     text-align: left;
     padding-left: 2%;
@@ -17,4 +17,8 @@
     font-size: 40px;
     font-family: "Montserrat";
     color: white;
+}
+
+.experience-mt{
+    margin-top: 1%;
 }
